Home Hero mobile styles

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_home-hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_home-hero.scss
@@ -9,6 +9,7 @@ body.page {
 			height: 70vh;
 			margin: 2em 1em;
 			@include full-bg;
+			position: relative;
 		}
 		.slick-dots {
 		    bottom: 18px;
