Press and gallery section- Artist

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -109,6 +109,7 @@
 @import "modules/photoswipe";
 @import "modules/newsletter-signup";
 @import "modules/online-item";
+@import "modules/press-accordion";
 
 
 // Components
