--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -90,7 +90,8 @@
 // ARTIST SINGLE PAGE
 .single-artists {
 	.artist-header-thumb {
-		height: 300px;
+		height: 200px;
+		margin-top: 2em;
 		@include full-bg;
 		-webkit-box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
 		box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
@@ -212,6 +213,17 @@ div#video-audio {
 		.alert.alert-warning {
 			@include center(x);
 			bottom: 0;
+		}
+	}
+}
+
+@include breakpoint(medium) {
+	.single-artists {
+		.artist-header-thumb {
+			height: 300px;
+			max-width: 400px;
+			margin-top: 0;
+			margin: 0 auto;
 		}
 	}
 }
