--- a/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
@@ -7,8 +7,8 @@ body.single.single-artists {
 	    height: 65vh;
 	    position: relative;
 	    .artist-details-area {
-	    	width: 1100px;
-	    	@include center;
+	    	width: 100%;
+	    	//@include center;
 	    }
 	    .artist-details-container {
 	    	padding: $sitepadding;
@@ -35,5 +35,14 @@ body.single.single-artists {
 		a {
 			color: #ffffff;	
 		}
+	}
+}
+
+
+//MEDIA QUERIES
+
+@include breakpoint(medium) {
+	body.single.single-artists .artist-header.container .artist-details-area {
+		@include center;
 	}
 }
