--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9814,10 +9814,12 @@ body.post-type-archive-artists li.cat-item-all a {
   text-align: center;
   padding: 25px 0; }
 
+.link-banner .small-12.medium-6.columns.link-banner-button button {
+  width: 75%; }
+
 .link-banner button {
   border: 1px solid #ffffff;
   padding: 1em;
-  width: 75%;
   color: #ffffff;
   font-weight: bold; }
 
@@ -11314,7 +11316,8 @@ body.page .slick-dotted.slick-slider {
   -webkit-background-size: cover;
   background-size: cover;
   -webkit-box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75); }
+  box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
+  margin: 25px; }
 
 .single-artists .artist-navigation li {
   display: inline; }
@@ -12659,13 +12662,16 @@ body.post-type-archive-artists .mfp-close-btn-in .mfp-close {
 .quicklook-content-profile,
 .quicklook-content-pic {
   width: 100%;
-  height: 400px;
   float: left; }
   @media screen and (min-width: 64em) {
     .quicklook-content-profile,
     .quicklook-content-pic {
       width: 50%;
       height: 300px; } }
+
+@media screen and (max-width: 39.9375em) {
+  .quicklook-content-pic {
+    height: 400px; } }
 
 .quicklook-content-pic {
   background-position: center center;
@@ -13341,6 +13347,8 @@ body.home {
   bottom: 3em;
   margin-left: 1em;
   color: white; }
+  .single-tours-projects .hero-text-area span.hero-text-dates {
+    padding: 2px 11px 11px; }
 
 .single-tours-projects a.slick-slide img {
   padding: 10px; }
