--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -95,6 +95,7 @@
 		@include full-bg;
 		-webkit-box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
 		box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
+		margin: 25px;
 	}
 	.artist-navigation li {
 		display: inline;
