--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -14,6 +14,9 @@
       bottom: 3em;
       margin-left: 1em;
       color: white;
+      span.hero-text-dates {
+          padding: 2px 11px 11px;
+      }
   }
   //add some padding to gallery on tours-projects
   a.slick-slide {
