--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -83,6 +83,7 @@
     width: 100px;
     position: absolute;
     right: 0;
+    top: 1em;
   }
 
   #mega-menu-wrap-top-bar-r .mega-menu-toggle.mega-menu-open + #mega-menu-top-bar-r {
