--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -134,6 +134,7 @@
 @import "components/events-filtering-bar";
 @import "components/events-listing";
 @import "components/events-map";
+@import "components/staff-details";
 
 
 
