People Styles and getting rid of load more <hr/>

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -215,6 +215,30 @@ div#video-audio {
 			@include center(x);
 			bottom: 0;
 		}
+		hr {
+			opacity: 0;
+		}
+	}
+}
+
+.post-type-archive-people {
+	article {
+		position: relative;
+		.archive__load-more {
+			@include center(x);
+			bottom: 0;
+			a {
+				color: $brand-red;
+				font-weight: bold;
+			}
+		}
+		.alert.alert-warning {
+			@include center(x);
+			bottom: 0;
+		}
+		hr {
+			opacity: 0;
+		}
 	}
 }
 
