--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
@@ -209,7 +209,15 @@
     display: flex;
     a.view-link {
         font-weight: bold;
-        line-height: 95px;
+        line-height: 78px;
         color: initial;
     }
+}
+
+@include breakpoint(medium) {
+  .header-row {
+      a.view-link {
+          line-height: 95px;
+      }
+  }
 }
