--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-format-audio.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-format-audio.scss
@@ -1,6 +1,6 @@
-body.single-format-audio {
-	#single-post {
-		background-color: $bgdarkgrey;
-		color: $white;
-	}
-}
+// body.single-format-audio {
+// 	#single-post {
+// 		background-color: $bgdarkgrey;
+// 		color: $white;
+// 	}
+// }
