Single Online item details

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -149,5 +149,6 @@
 @import "templates/splash-page";
 @import "templates/tours-projects";
 @import "templates/narrow-page";
+@import "templates/single-online";
 @import "templates/single-format-audio"; // audio format single post.
 
