--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -151,6 +151,7 @@ img.circle-thumb {
 
 .side-bar-artist {
     display: flex;
+    line-height: 60px;
     img.circle-thumb {
         margin-right: $sitepadding;
     }
@@ -234,7 +235,7 @@ span.side-bar-artist-name, .event-detail {
 @include breakpoint(small only) {
   .event-listing-details {
       font-size: 19px;
-      text-align: center;
+      // text-align: center;
       padding-right: 12px;
       .side-bar-artist-details {
         text-align: left;   
