People and Clients Styles

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-online.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-online.scss
@@ -30,3 +30,11 @@ body.single-online {
   display: inline;
   }
 }
+
+.online-item-thumb {
+  transition: 0.5s;
+}
+
+.online-item-thumb:hover {
+  opacity: 0.8;
+}
