Sticky Red nav on Projects and artists

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -150,5 +150,6 @@
 @import "templates/tours-projects";
 @import "templates/narrow-page";
 @import "templates/single-online";
+@import "templates/single-people";
 @import "templates/single-format-audio"; // audio format single post.
 
