--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
@@ -18,3 +18,12 @@ ul.single-page-nav {
     	}
     }
 }
+
+//styles for sticking nav after scroll
+#sticky.stick {
+    margin-top: 0 !important;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+}
