--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -22,6 +22,12 @@
       }
   }
 
+  .project-intro {
+    .section-header {
+      padding: 0;
+    }
+  }
+
   div.tour-intro-sidebar {
     .section-header {
       padding: 0px 0;
