--- a/wp-content/themes/askonasholt2016/assets/scss/components/_events-listing.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_events-listing.scss
@@ -5,3 +5,15 @@
 		padding: 1rem 0;
 	}
 }
+
+.online-performances-link {
+	button {
+		background-color: #fefefe;
+		color: #F2F1ED;
+		border: 1px solid #B49A81;
+		color: #B49A81;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		font-weight: bold;
+	}
+}
