--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -226,7 +226,7 @@ ul.accordion {
 .event-listing-details {
     font-size: 19px;
     .side-bar-artist-details {
-        line-height: 30px;
+        // line-height: 30px;
     }
 }
 
