Making Load maore a button

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -264,3 +264,20 @@ body.post-type-archive-artists {
 		}
 	}
 }
+
+
+
+//MEDIA QUERIES **************
+
+@include breakpoint(small only) {
+  ul.artist-categories {
+  	width: 100%;
+  	li {
+  		margin-right: 2.5px;
+  		margin-bottom: 2.5px;
+  		a {
+  			padding: 0.85em 0.5em;
+  		}
+  	}
+  }
+}
