--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -75,9 +75,40 @@ body.blog {
 	}
 	.archive__load-more {
 		@include center(x);
-		bottom: 0;
+		bottom: 5px;
 	}
 }
+
+body.blog {
+	section.container {
+		hr {
+			opacity: 0;
+		}
+	}
+}
+
+.archive__load-more {
+	background-color: #fefefe;
+	border: 1px solid #B49A81;
+	margin-bottom: 0;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 1px;
+	transition: 0.5;
+	a {
+		color: #B49A81;
+		transition: 0.5s;
+		height: 100%;
+		width: 100%;
+		padding: 0.85em 1em;
+	}
+}
+
+.archive__load-more:hover {
+	background-color: #9e0a28;
+	a {color: #fff;}
+}
+
 
 //************************
 //Single Magazine pages **
