--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -87,27 +87,29 @@ body.blog {
 	}
 }
 
-.archive__load-more {
-	background-color: #fefefe;
-	border: 1px solid #B49A81;
-	margin-bottom: 0;
-	text-transform: uppercase;
-	font-weight: bold;
-	letter-spacing: 1px;
-	transition: 0.5;
-	a {
-		color: #B49A81;
-		transition: 0.5s;
-		height: 100%;
-		width: 100%;
-		padding: 0.85em 1em;
-	}
-}
+ .archive__load-more {
+ 	font-weight: bold;
+// 	background-color: #fefefe;
+// 	border: 1px solid #B49A81;
+// 	margin-bottom: 0;
+// 	text-transform: uppercase;
+// 	font-weight: bold;
+// 	letter-spacing: 1px;
+// 	transition: 0.5s;
+// 	a {
+// 		color: #B49A81;
+// 		height: 100%;
+// 		width: 100%;
+// 		padding: 0.85em 1em;
+// 	}
+ }
 
-.archive__load-more:hover {
-	background-color: #9e0a28;
-	a {color: #fff;}
-}
+// .archive__load-more:hover {
+// 	background-color: #9e0a28;
+// 	a {
+// 		color: #fff;
+// 	}
+// }
 
 
 //************************
