artist sticky nav js

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -64,7 +64,8 @@ header#masthead {
 nav#site-navigation {
     // max-width: 75rem;
     @include grid-row();
-    margin: 0 auto;
+    // margin: 0 auto;
+    margin: 0 2em; // adding some padding
     line-height: $header-height;
     // /position: relative;
 
