--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9634,7 +9634,7 @@ nav#site-navigation {
   max-width: 84.375rem;
   margin-left: auto;
   margin-right: auto;
-  margin: 0 auto;
+  margin: 0 2em;
   line-height: 135px; }
   nav#site-navigation::before, nav#site-navigation::after {
     content: ' ';
