Last Phase 1 changes.

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -216,6 +216,14 @@ ul.accordion {
   }
 }
 
+body.post-type-archive-events {
+  ul.accordion {
+    li.accordion-item .accordion-title {
+      display: flex !important;
+    }
+  }
+}
+
 .accordion-title:before {
   content: '^';
   -ms-transform: rotate(180deg); /* IE 9 */
